<resources>
    <string name="app_name">简约记账~</string>
    <string name="edit_one">记一笔...</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budget">支出预算剩余</string>
    <string name="set_budget">设置支出预算</string>
    <string name="see_table">查看图标分析</string>
    <string name="add_note">添加备注</string>
    <string name="note">备注（默认为无）</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_time">请输入时间（24小时制）</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="detail_account">账单详情</string>

    <string name="about_app_info">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.n</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">本项目参照 \nhttps://www.bilibili.com/video/BV1hZ4y1V7E3?p=4 \n原作者为b站up主：写bug的狐狸 \n优化一些细节，如记一笔的时间和备注回写，日历中只显示有的月份，记账首页以时间降序排序等</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">一个不知名的二本的学生，程序员(＠_＠;)，爱好吉他 🎸</string>
    <string name="about_email">发送邮件</string>
    <string name="about_email2">我的邮箱是: 就不告诉你 (　o=^•ェ•)o┏━┓</string>
    <string name="about_code">源代码</string>
    <string name="about_code_info">我的代码托管在码云服务器上，地址链接为：\nhttps://github.com/BloothOfYouth/2018127109_Android/tree/master/Tally</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>
    <string name="all_date_empty">您还未添加记录~~</string>
    <string name="chart_info">账单详情</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_data">暂无数据</string>

</resources>
